# zeno

./: .gitignore  CLAUDE.md  Cargo.toml  DEVELOPMENT.md  justfile  test-frontmatter.md
docs/: Phase1-基础架构搭建完成报告.md  Zeno - 基于 Zettelkasten 的知识管理与发布平台.md  phase1-基础架构搭建.md  phase2-实施报告.md  phase2-数据管理层.md  phase3-用户界面层.md  phase3-用户界面层完成报告.md  phase4-知识网络层.md  phase5-发布扩展层.md  执行策略和风险管理.md
examples/: plugin-development-guide.md  plugin-marketplace.md
examples/plugins/hello-world/: README.md  index.js  plugin.json
examples/plugins/note-stats/: README.md  index.js  plugin.json
scripts/: check-gitignore.sh
zeno-app/: package.json  pnpm-lock.yaml
zeno-app/src/: App.tsx  index.css
zeno-app/src-tauri/: Cargo.toml  tauri.conf.json
zeno-app/src-tauri/src/: lib.rs  main.rs
zeno-app/src-tauri/src/commands/: app.rs  config.rs  import_export.rs  links.rs  mod.rs  notes.rs  plugin_commands.rs  publisher.rs  tags.rs  wechat.rs
zeno-app/src-tauri/src/models/: error.rs  exporter.rs  importer.rs  link.rs  mod.rs  note.rs  plugin.rs  plugin_api.rs  publisher.rs  tag.rs  wechat.rs
zeno-app/src-tauri/src/services/: base_exporter.rs  base_importer.rs  config_service.rs  import_export_manager.rs  link_index.rs  link_parser.rs  mod.rs  note_service.rs  obsidian_importer.rs  plugin_api_service.rs  plugin_manager.rs  plugin_runtime.rs  wechat_publisher.rs  zola_publisher.rs
zeno-app/src-tauri/src/styles/: main.scss
zeno-app/src-tauri/src/templates/: base.html  index.html  page.html  section.html
zeno-app/src/components/: WeChatPublisher.tsx  index.ts
zeno-app/src/components/ContextMenu/: index.tsx
zeno-app/src/components/CreateNoteDialog/: index.tsx
zeno-app/src/components/Editor/: index.tsx
zeno-app/src/components/FileTree/: index.tsx
zeno-app/src/components/FrontMatter/: index.tsx
zeno-app/src/components/ImportExport/: ImportExportPage.css  ImportExportPage.tsx
zeno-app/src/components/KnowledgeGraph/: index.tsx
zeno-app/src/components/Outline/: index.tsx
zeno-app/src/components/PluginManager/: PluginManagerPage.css  PluginManagerPage.tsx
zeno-app/src/components/Search/: index.tsx
zeno-app/src/components/TagBrowser/: index.tsx
zeno-app/src/contexts/: EditorContext.tsx
zeno-app/src/hooks/: useHotkeys.ts  useKnowledgeGraph.ts  useTagHierarchy.ts
zeno-app/src/pages/: EditorPage.tsx  GraphPage.tsx  HomePage.tsx  NotesPage.tsx  PublisherPage.tsx  SettingsPage.tsx
zeno-app/src/styles/: PublisherPage.css
zeno-app/src/types/: cytoscape-plugins.d.ts
zeno-cli/: Cargo.toml
zeno-cli/src/: main.rs
zeno-core/: Cargo.toml
zeno-core/src/: error.rs  lib.rs
zeno-core/src/db/: connection.rs  migrations.rs  mod.rs  models.rs  schema.sql
zeno-core/src/indexer/: mod.rs
zeno-core/src/models/: frontmatter.rs  mod.rs  note.rs  tag.rs
zeno-core/src/parser/: markdown.rs  mod.rs
zeno-core/src/publisher/: mod.rs
zeno-core/src/storage/: mod.rs  repository.rs
(+4 files in other folders)
