[package]
name = "zeno-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Zeno 命令行工具"

[[bin]]
name = "zeno"
path = "src/main.rs"

[dependencies]
# Core library
zeno-core = { path = "../zeno-core" }

# CLI
clap = { workspace = true }

# Async
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"

# Error handling
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Utils
uuid = { workspace = true }